--- a/index.html
+++ b/index.html
@@ -259,7 +259,25 @@
 
 	   				<div class="timeline-header">
 	   					<h3>Software Engineer</h3>
-	   					<p>July 2023 - Present</p>
+	   					<p>August2024 - Present</p>
+	   				</div>
+
+	   				<div class="timeline-content">
+	   					<h4>UtilaSoft</h4>
+	   					<p>Laravel engineer with a comprehensive skill set spanning backend technologies Laravel, Jquery, Pusher and databases such as Mysql, I've working on a scalable solution that meet business objectives.</p>
+	   				</div>
+
+	   			</div> <!-- /timeline-block -->
+				
+				<div class="timeline-block">
+
+	   				<div class="timeline-ico">
+	   					<i class="fa fa-graduation-cap"></i>
+	   				</div>
+
+	   				<div class="timeline-header">
+	   					<h3>Software Engineer</h3>
+	   					<p>July 2023 - Jul 2024</p>
 	   				</div>
 
 	   				<div class="timeline-content">
