--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
 
 	   				<div class="timeline-content">
 	   					<h4>Devsinc</h4>
-	   					<p>As an associate software engineer with a solid foundation in Ruby on Rails and Wordpress, I've contributed to various team projects and honed my skills in front-end development. I hold a certification in Web Development from [Your Institution], showcasing my dedication to growing in this dynamic field.</p>
+	   					<p>As an associate software engineer with a solid foundation in Ruby on Rails and Wordpress, I've contributed to various team projects and honed my skills in front-end development. I hold a certification in Web Development showcasing my dedication to growing in this dynamic field.</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
